prevent layout shift in theme selector

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -59,9 +59,11 @@ nav {
   outline: none;
   padding: 0;
   margin: 0;
-  height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 17px;
+  height: 17px;
 
   img {
     height: 100%;
